--- a/syle.css
+++ b/syle.css
@@ -1,340 +1,607 @@
+html{
+	scroll-behavior: smooth;
+}
 *
 {
-	padding: 0px;
-	margin:0px;
-	font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	border: none;
 }
-.container
+.searchmenu 
 {
-	width: 83%;
-	margin: auto;
-}
-
-.a{
-
-	width: 100%;
+	width: 95%;
 	height: 70px;
 	background-color: black;
+	margin-left: 2.5%;
+	position: fixed;
+	z-index: 1;
+	font-size: 100%;
+	
 	
 }
-.a img{
-	padding-left:10px;
-}
-nav{
-	width: 100%;
-	height:35px;
-	background-color: #1d1d21;
-}
-.menu ul{
-	list-style: none;
-
-}
-.menu ul li
-{
+.searchmenu .menu ul li{
 	float: left;
-	line-height: 35px;
-	padding: 0 15px;
-}
-.menu ul li a{
+	list-style: none;
+	margin:0 2%;
+ }
+.searchmenu .menu ul li	a{
 	text-decoration: none;
-	font-size: 13px;
 	color: white;
-}
-.search{
-	float: right;
-	line-height: 33px;
-	padding-right: 10px;
-}
-.ảnh{
-	height: 400px;
-	margin-bottom: 20px;
-
+	line-height: 70px;
+	font-size:95%;
+	font-family: font-family: 'Recursive', sans-serif;
 
 }
-.ảnh img
+.searchmenu .menu ul li	a:hover{
+	border-bottom: 1px solid white;
+}
+.searchmenu .menu ul li	a img{
+	width:69%;
+	height: 70px;
+}
+.searchmenu .search
 {
+	line-height: 70px;
+}
+.searchmenu .search input
+{
+	height:30px;
+	width:15%;
+	border-radius: 5px;
+}
+.searchmenu .search button
+{
+	
+	height: 30px;
+	border-radius: 5px;
+}
+
+.backgroud
+{
+	width: 90%;
+	height: 130vh;
+	margin: auto;
+}
+
+
+.backgroud  img{
 	width: 100%;
 	height: 100%;
-	image-rendering: pixelated;
 }
-article h3
+.backgroud .but1
 {
-	margin-top: 20px;
-	font-size: 200%;
-	color: #272f54;
+	position: relative;
+	top:50vh;
+	left: ;
+	font-size: 250%;
+	background-color: transparent;
+	border: 1px solid black;
+	font-weight: bold;
+
+}
+.backgroud .but2
+{
+	position: relative;
+	top:-65vh;
+	left: 185vh;
+	font-size: 250%;
+	background-color: transparent;
+	border: 1px solid black;
+	font-weight: bold;
+
+}
+h1{
+	width: 15%;
 	margin: auto;
-	width: 20%;
+
+
 	
-	border-bottom: 1PX solid black;
 }
-article .newlist
-{
-	margin-top: 5%; 
-}
-article .newlist .newitem
-{
-	margin-top: 5%;
-	width: 28%;
-	float: left;
-	margin:0 2.5%;
-	border: 1px solid #ccc;
-	margin-bottom: 5%;
-}
-article .newlist .newitem:hover
-{
-box-shadow: 2px 2px 2px 1px #5d5656;
-transition: 0.7s;
-}
-.dd{
-	width: 95%;
-	margin-left: 2.5%;
-}
-article .newlist .newitem div
-{
-		font-family: 'KoHo', sans-serif;
-		margin: auto;
-
-}
-
-
-article .newlist .newitem h4
-
-{
-	color: red;
-	text-align: center;
-	font-family: 'Newsreader', serif;
-	font-size: 140%;
-}
-article .newlist1{
-	margin-top: 4%;
-}
-article .newlist1 .newitem1
-{
-	background-image: url(hs.jpg);
-	
-	width: 28%;
-	height: 200px;
-	float: left;
-	margin:0 2.5%;
-
-	border: 1px solid #ccc;
-	position: relative;
-	overflow: hidden;
-	transition: 0.6s;
-
-}
-article .newlist1 .newitem2
-{
-	background-image: url(tkdh.png);
-	
-	width: 28%;
-	height: 200px;
-	float: left;
-	margin:0 2.5%;
-
-	border: 1px solid #ccc;
-	position: relative;
-	overflow: hidden;
-	transition: 0.6s;
-
-}
-article .newlist1 .newitem3
-{
-	background-image: url(ltwt.jpg);
-	
-	width: 28%;
-	height: 200px;
-	float: left;
-	margin:0 2.5%;
-
-	border: 1px solid #ccc;
-	position: relative;
-	overflow: hidden;
-	transition: 0.6s;
-
-}
-article .newlist1 .newitem1 img{
-	width: 100%;
-	height:10%;
-}
-article .newlist1 .newitem1 p
-{
-	color: red;
-	text-align: center;
-	line-height: 200px;
-	text-transform: uppercase;
-	font-size: 140%;
-}
-article .newlist1 .newitem2 p
-{
-	color: blue;
-	text-align: center;
-	line-height: 200px;
-	text-transform: uppercase;
-	font-size: 140%;
-}
-article .newlist1 .newitem3 p
-{
-	color: blue;
-	text-align: center;
-	line-height: 200px;
-	text-transform: uppercase;
-	font-size: 140%;
-}
-article .newlist1 .newitem1 .khoi{
-	width: 45%;
-	height: 57%;
-	background-color: red;
-	transform: rotate(229deg)
-	;
-	position: absolute;
-	top: -45%;
-	left: -27%;
-
-}
-article .newlist1 .newitem2 .khoi1{
-	width: 45%;
-	height: 57%;
-	background-color: blue;
-	transform: rotate(229deg)
-	;
-	position: absolute;
-	top: -45%;
-	left: -27%;
-
-}
-article .newlist1 .newitem3 .khoi2{
-	width: 45%;
-	height: 57%;
-	background-color: green;
-	transform: rotate(229deg)
-	;
-	position: absolute;
-	top: -45%;
-	left: -27%;
-
-}
-article .newlist1 .newitem1:hover
-{	background-image: none;
-	top: -10px;
-	transition: 0.6s;
-
-}
-article .newlist1 .newitem2:hover
-{	background-image: none;
-	top: -10px;
-	transition: 0.6s;
-}
-article .newlist1 .newitem3:hover
-{	background-image: none;
-	top: -10px;
-	transition: 0.6s;
-}
-article .newlist1 .newitem1:hover p{
-	color: red;
-	font-size: 150%;
-	transition: 0.6s;
-	font-weight: bold;
-}
-article .newlist1 .newitem2:hover p{
-	color: red;
-	font-size: 150%;
-	transition: 0.6s;
-	font-weight: bold;
-}
-article .newlist1 .newitem3:hover p{
-	color: red;
-	font-size: 150%;
-	transition: 0.6s;
-	font-weight: bold;
-}
-
-
-
-
-
-
-
-
-
-#p1:hover{
-	color: blue;
-	font-size: 150%;
-	transition: 0.6s;
-	font-weight: bold;
-}
-#p2:hover{
-	color: green;
-	font-size: 150%;
-	transition: 0.6s;
-	font-weight: bold;
-}
-.end{
-	width: 100%;
-	height: 400px;
+.end div{
+	width: 90%;
+	height: auto;
 	background-color: black;
-	margin-top:25%;
-	display: block;
+	margin-right: 5%;
+	margin-top: 40px;
 }
-.end div
-{
-	width: 33%;
-	height: 80%;
-	float: left;
-
-
-	border-right: 1px solid yellow;
-}
-.end div h3
-{
-	color: yellow;
-	text-transform: uppercase;
+.end div p{
 	text-align: center;
-	padding-top: 5%;
-	padding-left: 5%;
-	font-size: 150%;
+	color: white;
+	font-size: 130%;
+	font-weight: bold;
+	line-height: auto;
+
 }
 .end div img{
-	width: 60%;
-	height: 50%;
-	margin-top: 20%;
-	margin-left: 25%;
+	margin-right: 30%;
 }
-.end div ul li
-{
-	color: yellow;
-	margin-left: 10%;
+.product{
 
-}
-.end div ul li i
-{
+	width: 90%;
+	height:65vh;
+	margin-left:5%;
 	
-	color:yellow;
-	font-size:150%;
-	display: inline;
-
 	
+	margin-bottom: 30px;
+	margin-top: 30px;
 
 }
-.end div ul li  p
-{
-	line-height: 40px;
-	margin-bottom: 5%;margin-top: 5%;
-	font-size: 130%;
-	font-family: 'Roboto', sans-serif;
-}
-.end div ul li  p a
-{
-	color: yellow;
-	text-decoration: none;
-	font-family: 'Roboto', sans-serif;
-	
+.product .product1{
+	width: 26%;
+	height: 100%;
+	position: relative;
+	background-color: #EEEEEE	;
+	border: 1px	solid black;
+	float: left;
+	margin-right: 3%;
+	margin-left:  4%;
+	transition: 0.9s;
 
 }
-.end div ul li  p a:hover
+.product .product1:hover .prd2 p
 {
 	color: blue;
 }
-#super{
-	border-right: none;
+.product .product3:hover .prd222 p
+{
+	color: blue;
+}
+.product .product2:hover .prd22 p
+{
+	color: blue;
+}
+.product .product1:hover
+{
+	top:-10px;
+	box-shadow: 0px 3px 3px 3px;
+	transition: 0.6s;
+}
+.product .product2:hover
+{
+	top:-10px;
+	box-shadow: 0px 3px 3px 3px;
+	transition: 0.6s;
+}
+.product .product3:hover
+{
+	top:-10px;
+	box-shadow: 0px 3px 3px 3px;
+	transition: 0.6s;
+}
+.product .product1 .prd1
+{
+	width: 100%;
+	height:82%;
+	background-image: url(image/2.jpg) ;
+	background-size: contain;
+
+}
+.product .product1 .prd2
+{
+	font-family: 'Roboto Slab', serif;
+}
+.product .product1 .prd2 p{
+	text-align: center;
+	font-size: 85%;
+}
+.product .product1 .prd2 p a
+{
+	float: right;
+	font-size: 80%;
+	text-decoration: none;
+	border: 1px	solid black;
+	border-radius: 7px;
+}
+#fix
+{
+	color: red;
+	padding-top: 5px;
+	font-size: 108%;
+}
+#fix a{
+	padding-right: 5px;
+}
+
+
+
+
+
+.product .product2{
+	width: 26%;
+	height: 100%;
+	position: relative;
+	background-color: #EEEEEE	;
+	border: 1px	solid black;
+	float: left;
+	margin-right: 3%;
+	margin-left:  4%;
+	transition: 0.9s;
+
+}
+.product .product2 .prd11
+{
+	width: 100%;
+	height:82%;
+	background-image: url(image/1.jpg) ;
+	background-size: contain;
+
+}
+.product .product2 .prd22
+{
+	font-family: 'Roboto Slab', serif;
+}
+.product .product2 .prd22 p{
+	text-align: center;
+	font-size: 85%;
+}
+.product .product2 .prd22 p a
+{
+	float: right;
+	font-size: 80%;
+	text-decoration: none;
+	border: 1px	solid black;
+	border-radius: 7px;
+}
+#fix
+{
+	color: red;
+	padding-top: 5px;
+	font-size: 150%;
+}
+#fix a{
+	padding-right: 5px;
+}
+
+
+
+
+
+
+
+
+
+.product .product3{
+	width: 26%;
+	height: 100%;
+	position: relative;
+	background-color: #EEEEEE	;
+	border: 1px	solid black;
+	float: left;
+	margin-right: 3%;
+	transition: 0.9s;
+	margin-left:  4%;
+
+}
+.product .product3 .prd111
+{
+	width: 100%;
+	height:82%;
+	background-image: url(image/3.jpg) ;
+	background-size: contain;
+
+}
+.product .product3 .prd222
+{
+	font-family: 'Roboto Slab', serif;
+}
+.product .product2 .prd22 p{
+	text-align: center;
+	font-size: 85%;
+}
+.product .product3 .prd222 p a
+{
+	float: right;
+	font-size: 80%;
+	text-decoration: none;
+	border: 1px	solid black;
+	border-radius: 7px;
+}
+#fix
+{
+	color: red;
+	padding-top: 5px;
+	font-size: 150%;
+}
+#fix a{
+	padding-right: 5px;
+}
+
+
+
+
+.đôi
+{
+	width: 90%;
+	height: 50vh;
+	margin-left:7%;
+	margin-top: 5%;
+	height: 80vh;
+
+	display: flex;
+}
+.đôi1{
+	width: 40vw;
+	height: 100%;
+
+
+	transition: 0.9s;
+}
+.đôi1 img
+{
+	width: 40vw;
+	height: 100%;
+}
+.đôi1:hover{
+	background-color:#EEEEEE;
+	opacity: 0.8;
+	transition: 0.6s;
+	top: 10px;
+	
+}
+.đôi2 div img:hover{
+	background-color:#EEEEEE;
+	opacity: 0.8;
+	transition: 0.6s;
+	
+	border:1px solid black;
+}
+.đôi2{
+	width: 46vw;
+	height: 100%;
+
+	background-color: #EEEEEE;
+	float: right;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin-left:40px;
+
+}
+.đôi2 div img{
+	margin-top: 4%;
+	width: 19vw;
+	height: 35vh;
+	margin-right: 3vw;
+
+}
+
+
+.tin{
+	width: 60%;
+	height: 35vh;
+	margin-top: 5%;
+	margin-left: 20%;
+	display: flex;
+	padding-left: 5%;
+	border-left: 1px solid #bbb7b6;
+	position: relative;
+	margin-bottom: 30px;
+	padding-bottom: 5px;
+	border-bottom: 1px solid #bbb7b6;
+
+}
+.tin:hover{
+	border: 1px solid #bbb7b6;
+}
+.tin:hover a{
+	color: red;
+}
+.tin img{
+	width: 40%;
+	height: 100%;
+	padding-right: 3%;
+
+
+}
+.tin a{
+	text-decoration: none;
+	color: black;
+	font-size: 120%;
+	font-weight: bold;
+	
+}
+.tin div p{
+	position: absolute;
+	top: 30%;
+	left:50%;
+	padding-top: 
+}
+.y{
+	width: 45%;
+	margin: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1200px) {
+	h1{
+		
+		font-size: 100%;
+
+	}
+	.searchmenu{
+		height: 
+	}
+	.backgroud {
+		height: auto;
+	}
+	
+	.backgroud .but1{
+		display: none;
+	}
+	.backgroud .but2{
+		display: none;
+	}
+	.searchmenu .search{
+		display: none;
+	}
+	.searchmenu .menu ul li {
+
+		margin-right:4%;
+	}
+
+	.searchmenu .menu ul li	a{
+		font-size: 80%;
+	}
+	.product{
+		height: 40vh;
+	}
+	.product .product2 .prd22 p {
+		font-size: 75%;
+	}
+	.product .product1 .prd2 p {
+		font-size: 75%;
+	}
+	.product .product3 .prd222 p {
+		font-size: 75%;
+	}
+	#fix{
+		display: none;
+	}
+	.y{
+	width: 45%;
+	margin: auto;
+}
+	.y iframe{
+		width: 100%;
+		height: 100%;
+	}
+	
+}
+
+
+
+@media screen and (max-width: 950px){
+	.đôi{
+		background-color: white ;
+	}
+	.đôi2{
+		display: block-inline;
+		width: 100%;
+		height: auto;
+		background-color: white ;
+
+	}
+	.đôi2 div img {
+    margin-top: 4%;
+    width: 37vw;
+    height: 38vh;}
+	.đôi1 {
+		display: none;
+
+	}
+	
+	.searchmenu .menu ul li	a{
+		font-size: 80%;
+	}
+	.searchmenu .menu ul li {
+
+		margin-right:2%;
+	}
+	.tin a{
+	
+	color: black;
+	font-size: 100%;
+	font-weight: bold;}
+	.tin div p{
+		font-size: 70%;
+	}
+	
+}
+	
+		
+}
+@media screen and (max-width: 760px){
+	.searchmenu .menu ul li	a{
+		font-size: 60%;
+	}
+	.searchmenu .menu ul li	a img{
+	width:39%;
+	height: 50px;
+	}
+	.searchmenu 
+{
+	width: 95%;
+	height: 60px;}
+	.product{
+		height: 40vh;
+	}
+	.product .product2 .prd22 p {
+		font-size: 55%;
+	}
+	.product .product1 .prd2 p {
+		font-size: 55%;
+	}
+	.product .product3 .prd222 p {
+		font-size: 55%;
+	}
+	#fix{
+		display: none;
+	}
+	.product .product1{
+		margin-right: 6%;
+	}
+	.product .product2{
+		margin-right: 6%;
+	}
+	.product .product3{
+		margin:auto;
+	}
+}
+@media screen and (max-width: 750px){
+	.searchmenu .menu ul li	a{
+		font-size: 50%;
+	}
+	.product .product2 .prd22 p {
+		font-size: 35%;
+	}
+	.product .product1 .prd2 p {
+		font-size: 35%;
+	}
+	.product .product3 .prd222 p {
+		font-size: 5%;
+	}
+	.product .product2 {
+		width: 23%;
+		height: 80%;
+	}
+	.product .product1 {
+		width: 23%;
+		height: 80%;
+	}
+	.product .product3 {
+		width: 23%;
+		height: 80%;
+	}
+	.product{
+
+	width: 90%;
+	height:35vh;
+	margin-left:5%;
+	
+	
+	margin-bottom: 30px;
+	margin-top: 30px;}
+	.searchmenu{
+		height: 40px;
+	}
+	.searchmenu .menu ul li a{
+		line-height: 40px;
+	}
+	.searchmenu .menu ul li	a img{
+	width:30%;
+	height: 40px;
 }
