--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h1{
 {
 	width: 100%;
 	height:82%;
-	background-image: url(image/2.jpg) ;
+	background-image: url(2.jpg) ;
 	background-size: contain;
 
 }
@@ -222,7 +222,7 @@ h1{
 {
 	width: 100%;
 	height:82%;
-	background-image: url(image/1.jpg) ;
+	background-image: url(1.jpg) ;
 	background-size: contain;
 
 }
@@ -276,7 +276,7 @@ h1{
 {
 	width: 100%;
 	height:82%;
-	background-image: url(image/3.jpg) ;
+	background-image: url(3.jpg) ;
 	background-size: contain;
 
 }
